--- a/templates/cohorts/cohort_filelist_all.html
+++ b/templates/cohorts/cohort_filelist_all.html
@@ -81,7 +81,8 @@
                     <ul>
                         <li class="menu-item">
                             <div class="filelist-obtain">
-                                <a class="download-link" href="{{ download_url }}" title="Download file manifest as CSV"><button class="btn btn-info">CSV</button></a>{# <a id="download-link" href="{{ download_url }}" title="Download file manifest as JSON"><button class="btn btn-info">JSON</button></a>#}
+                                <a class="download-link" href="{{ download_url }}" title="Download file manifest as CSV"><button class="btn btn-info download-btn">CSV</button></a>{# <a id="download-link" href="{{ download_url }}" title="Download file manifest as JSON"><button class="btn btn-info">JSON</button></a>#}
+                                <input type="hidden" class="download-token" value="" />
                             </div>
                         </li>
                         <li class="menu-item">
