--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -1,4 +1,13 @@
 #cohort-details, #cohort-filelist
+    .pending-left
+        margin-right: 5px
+        i
+            margin-right: 4px
+
+    .pending-right
+        margin-left: 5px
+        i
+            margin-left: 4px
 
     #placeholder
         .panel-body
