-> Send correct total to CSV downloader so it will still download, just only 65k records

--- a/templates/cohorts/cohort_filelist_all.html
+++ b/templates/cohorts/cohort_filelist_all.html
@@ -72,8 +72,9 @@
         <div class="filelist-panel panel">
             <div id="" class="alert alert-warning alert-dismissable file-list-warning" style="display: none;">
                 <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                The maximum number of files which can be downloaded in a list is <span class="file-list-limit">{{ file_list_max }}</span>. Your selections currently total
-                <span class="file-list-total">#</span>. Please filter your list using the platform panel at the left (or make a smaller cohort) to limit the size of your file download list.
+                The maximum number of file records which can be downloaded is <span class="file-list-limit">{{ file_list_max }}</span>. Your selections currently total
+                <span class="file-list-total">#</span>. If you download the list now, it will be arbitrarily cut off after the maximum. Please consider filtering your list
+                using the filter panel at the left, or make a smaller cohort, to limit the size of your file download list.
             </div>
             <div class="panel-heading">
                 <h4>File Listing</h4>
