--- a/templates/cohorts/cohort_filelist_camic.html
+++ b/templates/cohorts/cohort_filelist_camic.html
@@ -38,7 +38,9 @@
                     <thead>
                         <tr>
                             <th class="col-program">Program</th>
+                            <th class="col-barcode">Case Barcode</th>
                             <th class="col-barcode">Sample Barcode</th>
+                            <th class="col-filename">File Name</th>
                             <th class="col-diseasecode">Disease Code</th>
                             <th class="col-thumbnail">Thumbnail</th>
                             <th class="col-datatype">Data Type</th>
@@ -47,9 +49,15 @@
                         </tr>
                     </thead>
                     <colgroup>
-                        <col style="width: 8%">
-                        <col style="width: 17%">
-                        <col style="width: 8%">
+                        <col style="width: 6%">
+                        <col style="width: 14%">
+                        <col style="width: 14%">
+                        <col style="width: 14%">
+                        <col style="width: 13%">
+                        <col style="width: 13%">
+                        <col style="width: 16%">
+                        <col style="width: 5%">
+                        <col style="width: 5%">
                     </colgroup>
                     <tbody>
                     </tbody>
