--- a/templates/cohorts/cohort_filelist_dicom.html
+++ b/templates/cohorts/cohort_filelist_dicom.html
@@ -13,11 +13,12 @@
                     <span class="spinner"><i class="fa fa-spin fa-spinner hidden"></i></span>
                 </div>
 
-                <table class="table table-striped file-list-table" aria-label="File Listing Table">
+                <table class="table table-striped file-browser-list-table" aria-label="File Listing Table">
                     <thead>
                         <tr>
                             <th class="col-program">Program</th>
                             <th class="col-case">Case Barcode</th>
+                            <th class="col-filename">File Name</th>
                             <th class="col-diseasecode">Disease Code</th>
                             <th class="col-projectname">Project Short Name</th>
                             <th class="col-studydesc">Study Description</th>
@@ -26,6 +27,7 @@
                     </thead>
                     <colgroup>
                         <col style="width: 8%">
+                        <col style="width: 12%">
                         <col style="width: 12%">
                         <col style="width: 6%">
                         <col style="width: 8%">
