-> BQ export upgrades: no more reload on completion, dialog opens immediately but gives feedback on loading datasets and tables, form resets on dialog closure to prevent 'are you sure' on navigating away. dialog doesn't reload datasets and tables after initial load

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -406,7 +406,6 @@
     .hidden_form_value
         display: none
 
-
     .file-list
         .alert-dismissable
             display: none
@@ -608,3 +607,25 @@ span.code
             padding-right: 25px
             padding-left: 25px
             display: inline-block
+
+#export-to-bq-modal
+    .spinner
+        position: absolute
+        width: 100%
+        height: 65%
+        top: 18%
+        left: 0px
+        background: rgba(255,255,255,.5)
+        z-index: 10
+        div
+            position: absolute
+            text-align: center
+            height: 50px
+            top: 35%
+            padding-top: 20px
+            margin: auto
+            font-size: 18px
+            width: 100%
+            background: rgba(255,255,255,1)
+        i
+            font-size: 20px
