--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -453,6 +453,7 @@
             .col-datalevel
                 width: 90px
             td
+                height: 48px
                 .col-filename
                     div
                         display: block
@@ -462,20 +463,30 @@
                 div
                     &.col-filename
                         &:hover
-                            display: inline-block
-                            position: relative
-                            z-index: 99
+                            display: block
+                            position: absolute
+                            z-index: 1
                             color: #FFF
                             background-color: #2a537a
                             border-color: #2a537a
                             padding: 5px
+                            margin-left: -5px
+                            margin-top: -5px
                             border-radius: 3px
-                            overflow: visible
                 &:last-child
                     i
                         color: $isb-success
         input
             margin-left: 5px
+    .file-page-count
+        display: block
+        span
+            &.files-per-page
+                clear: right
+                float: right
+        .files-per-page .form-control
+            display: inline-block
+            width: auto
 
     .nav-tabs
         li,li.active
