--- a/templates/cohorts/cohort_filelist_camic.html
+++ b/templates/cohorts/cohort_filelist_camic.html
@@ -26,8 +26,21 @@
                 <h4>File Listing</h4>
             </div>
             <div class="panel-body">
-                <p class="file-page-count">Showing <span class="showing">20</span> files. Page: <span class="page-num">1</span> of <span class="file-count">unknown</span> pages.</p>
-                <p class="no-file-page-count" style="display: none;">Showing 0 files.</p>
+                <div class="file-page-count">
+                    <span>Showing <span class="showing">25</span> of <span class="total-file-count"></span> files</span>
+                    <span>
+                        (Page: <span class="page-num">1</span> of <span class="page-count">unknown</span>)
+                    </span>
+                    <span class="files-per-page">Display
+                        <select class="form-control">
+                            <option value="25">25</option>
+                            <option value="50">50</option>
+                            <option value="100">100</option>
+                        </select>
+                        per page
+                    </span>
+                </div>
+                <div><span class="no-file-page-count" style="display: none;">Showing 0 files.</span></div>
                 <div>
                     <a role="button" class="btn btn-primary prev-page disabled">Previous Page</a>
                     <a role="button" class="btn btn-primary next-page">Next Page</a>
