--- a/templates/cohorts/share_cohort_modal.html
+++ b/templates/cohorts/share_cohort_modal.html
@@ -23,7 +23,7 @@
                             </div>
                             <div class="modal-footer">
                                 {% csrf_token %}
-                                <input type="submit" class="btn btn-primary" />
+                                <input type="submit" value="Share Cohort" class="btn btn-primary owner-only" />
                             </div>
                         </form>
                     </div>
