-> #2257, modal and JS code -> Fixed favicon which has been missing for a while

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -619,7 +619,7 @@ span.code
             padding-left: 25px
             display: inline-block
 
-#export-to-bq-modal
+#export-to-bq-modal, #export-to-gcs-modal
     .spinner
         position: absolute
         width: 100%
