--- a/templates/cohorts/cohort_filelist_all.html
+++ b/templates/cohorts/cohort_filelist_all.html
@@ -91,8 +91,8 @@
                         <li class="menu-item">
                             <div class="filelist-obtain">
 
-                                <button class="btn btn-info export-btn" data-toggle="modal" data-target="#export-to-bq-modal" title="Export this file manifest to a BigQuery table">Export to BQ</button>
-{#                                <a id="download-link" href="{{ export_url }}" title="Export file manifest to BQ"><button class="btn btn-info">BQ</button></a> <a id="download-link" href="" title="Export file manifest to GCS"><button class="btn btn-info">GCS</button></a>#}
+                                <button class="btn btn-info export-btn" data-toggle="modal" data-target="#export-to-bq-modal" title="Export this file manifest to a BigQuery table">BigQuery</button>
+                                <button class="btn btn-info export-btn" data-toggle="modal" data-target="#export-to-gcs-modal" title="Export this file manifest to a GCS bucket">GCS</button>
                             </div>
                         </li>
                     </ul>
