-> More fun with spacing

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -444,6 +444,8 @@
         .page-num, .file-count
             display: inline-block
         table
+            thead
+                font-size: 12px
             table-layout: fixed
             word-wrap: normal
             font-size: 13px
